Bug 1940828 - Make XML parsing not hang when an async script uses sync XHR. r=peterv,smaug,jesup

Differential Revision: https://phabricator.services.mozilla.com/D237712